Commit Usage of ServletMapping Interface in Servlet 4.0

--- a/servlet-02-mapping/pom.xml
+++ b/servlet-02-mapping/pom.xml
@@ -1,35 +1,43 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.jdc.ee</groupId>
-  <artifactId>servlet-02-mapping</artifactId>
-  <version>1.0</version>
-  <packaging>war</packaging>
-  <properties>
-  	<maven.compiler.source>1.8</maven.compiler.source>
-  	<maven.compiler.target>1.8</maven.compiler.target>
-  	<failOnMissingWebXml>false</failOnMissingWebXml>
-  </properties>
-  <build>
-  	<finalName>${project.artifactId}</finalName>
-  </build>
-  <dependencies>
-  	<dependency>
-  		<groupId>jakarta.servlet</groupId>
-  		<artifactId>jakarta.servlet-api</artifactId>
-  		<version>4.0.3</version>
-  		<scope>provided</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>jakarta.servlet.jsp</groupId>
-  		<artifactId>jakarta.servlet.jsp-api</artifactId>
-  		<version>2.3.6</version>
-  		<scope>provided</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>jakarta.servlet.jsp.jstl</groupId>
-  		<artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
-  		<version>1.2.7</version>
-  		<scope>provided</scope>
-  	</dependency>
-  </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.jdc.ee</groupId>
+	<artifactId>servlet-02-mapping</artifactId>
+	<version>1.0</version>
+	<packaging>war</packaging>
+	<properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<failOnMissingWebXml>false</failOnMissingWebXml>
+	</properties>
+	<build>
+		<finalName>${project.artifactId}</finalName>
+	</build>
+	<dependencies>
+		<dependency>
+			<groupId>jakarta.servlet</groupId>
+			<artifactId>jakarta.servlet-api</artifactId>
+			<version>4.0.3</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.servlet.jsp</groupId>
+			<artifactId>jakarta.servlet.jsp-api</artifactId>
+			<version>2.3.6</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.servlet.jsp.jstl</groupId>
+			<artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+			<version>1.2.7</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.glassfish.web</groupId>
+			<artifactId>jstl-impl</artifactId>
+			<version>1.2</version>
+		</dependency>
+	</dependencies>
 </project>
