--- a/servlet-03-jstl/pom.xml
+++ b/servlet-03-jstl/pom.xml
@@ -18,6 +18,11 @@
 			<version>8.0.0</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.glassfish.web</groupId>
+			<artifactId>jstl-impl</artifactId>
+			<version>1.2</version>
+		</dependency>
 
 	</dependencies>
 	<properties>
