--- a/servlet-06-security/pom.xml
+++ b/servlet-06-security/pom.xml
@@ -16,6 +16,17 @@
   		<version>8.0.0</version>
   		<scope>provided</scope>
   	</dependency>
+  	<dependency>
+  		<groupId>org.hsqldb</groupId>
+  		<artifactId>hsqldb</artifactId>
+  		<version>2.5.0</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.glassfish.web</groupId>
+  		<artifactId>jstl-impl</artifactId>
+  		<version>1.2</version>
+  		<scope>provided</scope>
+  	</dependency>
   </dependencies>
   <build>
   	<finalName>${project.artifactId}</finalName>
